# fix-compile

./: .env.example  .pre-commit-config.yaml  ARCHITECTURE.md  LICENSE  README.md  TODOs.md  __main__.py  main.py  pyproject.toml
assets/examples/no-copy-dir/: Dockerfile.bad
docs/: cli.md
docs/dev-docs/: 传参方法.md  存储目录位置.md  测试命令.md
examples/: quickstart.py
src/: __main__.py
src/cli/: __init__.py  config.py  main.py  utils.py
src/cli/commands/: __init__.py  docker.py
src/fix_compile/: __init__.py  __main__.py  analyzer.py  brain.py  cli.py  config.py  config_manager.py  constants.py  executor.py  fixer.py  main.py  models.py  observability.py  schema.py
src/fix_compile/tools/: __init__.py  filesystem.py
src/fix_compile/utils/: dev_tool.py  io.py  prompt_builder.py  ui.py
src/fix_compile/workflows/: analyzer.py  brain.py  docker_fixer.py  executor.py  fixer.py  general_fixer.py
tests/: __init__.py  test_architecture.py
